apps/uptime-kuma/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forward-auth@kubernetescrd  # disabled
spec:
  tls:
    - hosts:
        - uptime.liberispat.com
      secretName: liberispat-wildcard-tls
  rules:
    - host: uptime.liberispat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
